# cpp-playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cmake.md  Expressions.md  Matrices.md  README.md  build_all.sh  install_dep.sh  test_all.sh
benchmarks/: CMakeLists.txt  bench_arrays.cpp  bench_complete_search.cpp  bench_matrix.cpp  benchmark.md
docs/: Benchmarks.md  CMake.md  Matrices.md  Preprocessor.md  testing.md
include/: array_utils.h  complete_search.h  huffman.h  matrices.h  search_array.h  utils.h
scripts/: bench_all.sh  build_all.sh  perf_all.sh  test_all.sh
src/: CMakeLists.txt  algo.cpp  bench_matrix.cpp  bits.cpp  fib.cpp  filesystem.cpp  hello.cpp  jthreads.cpp  lifetimes.cpp  macros.cpp  matrices.cpp  matrix.cpp  multithread.cpp  numerics.cpp  overload_resolution.cpp  test.cpp  time.cpp  ub.cpp
src/algorithms/: CMakeLists.txt  array_seach.cpp  arrays.cpp  arrays.cpp.cpp  complete_search.cpp  discrete_space.cpp  huffman.cpp  queens_problem.cpp  search_array.cpp  sorting.cpp  sparsetable.cpp
src/coreLanguage/: CMakeLists.txt  constructorResolution.cpp  lifetimes.cpp
src/ds/: CMakeLists.txt  linkedlist.cpp
src/linear_algebra/: matrices.cpp
src/performance/: CMakeLists.txt  false_sharing.cpp
src/problems/: CMakeLists.txt  array_easy.cpp  coin_change.cpp  queens_problem.cpp  strings_easy.cpp  subsequences.cpp
tests/: CMakeLists.txt  test_array.cpp  test_huffman.cpp  test_matrix.cpp
