# Static libraries
add_library(huffman STATIC huffman.cpp)
# Subdirectories

# Executables
add_executable(array arrays.cpp)
add_executable(sorting sorting.cpp)
add_executable(search_array search_array.cpp)
add_executable(complete_search complete_search.cpp)
add_executable(queens_problem queens_problem.cpp)
# Linking
